Beta version of stream-aware field list, based on search engine queries invoked periodically.
Index_field_types collection is used to store field-streams relation.